[package]
name = "mychain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"
ed25519-dalek = "1.0.1"
sha2 = "0.10.2"
blake3 = "1.3"
merkletree = "0.21.0"
clap = { version = "3.2", features = ["derive"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.75"
thiserror = "1.0.44"
futures = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
hex = "0.4.3"
rand = "0.8.5"
chrono = { version = "0.4.28", features = ["serde"] }
